<resources>
    <string name="app_name">EFinder</string>
    <string name="blue_logo_description">Descripción del logotipo azul</string>
    <string name="white_logo_description">Descripción del logotipo blanco</string>
    <string name="btnInicio_desc">Inicio</string>
    <string name="btnCalendar_desc">Agenda</string>
    <string name="btnPlanning_desc">Nuevo planning</string>
    <string name="btnShop_desc">Tienda</string>
    <string name="btnProfile_desc">Perfil</string>
    <string name="roundBack_desc">RoundBack</string>
    <string name="btnBack_desc">Volver atrás</string>
    <string name="mapView_desc">Mapa</string>
    <string name="scrollView_desc">ScrollView</string>
    <string-array name="spinner_options">
        <item>Búsqueda por localización</item>
        <item>Búsqueda por actividad</item>
    </string-array>
    <string name="acerca_de">Acerca de</string>
    <string name="version_de_la_aplicacion">Versión de la aplicación</string>
    <string name="version_info">Versión 1.1, actualmente en desarrollo</string>
    <string name="desarrollado_por">Desarrollado por</string>
    <string name="desarrolladores">Esteban Bernal Martínez, Santiago Puebla, Dennis Alexander Noboa, Tarik Salahi y David Gómez</string>
    <string name="buscar_evento_por_localizacion">Buscar evento por localización</string>
    <string name="buscar_evento_por_actividad">Buscar evento por actividad</string>
    <string name="agenda_de_eventos">Agenda de eventos</string>
    <string name="para_el_dia">Para el día:</string>
    <string name="textview">TextView</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="todo">TODO</string>
    <string name="no_podr_s_volver_a_acceder_a_tu_cuenta_si_la_borras">No podrás volver a acceder a tu cuenta si la borras</string>
    <string name="est_s_seguro_que_quieres_eliminar_tu_cuenta">¿Estás seguro que quieres eliminar tu cuenta?</string>
    <string name="descripci_n_de_la_imagen_o_funci_n_del_bot_n">Descripción de la imagen o función del botón</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="descripci_n_de_la_imagen_o_funcion_del_bot_n">Descripción de la imagen o función del botón</string>
    <string name="fiesta">Fiesta</string>
    <string name="descripci_n_de_la_imagen_o_funci_n_del_boton">Descripción de la imagen o función del botón</string>
    <string name="rutas">Rutas</string>
    <string name="descripci_n_de_la_imagen_o_funcion_del_boton">Descripción de la imagen o función del botón</string>
    <string name="turismo">Turismo</string>
    <string name="zoo">Zoo</string>
    <string name="b_squeda_por_actividad">Búsqueda por actividad</string>
    <string name="b_squeda_por_localizaci_n">Búsqueda por localización</string>
    <string name="destinos_frecuentes">Destinos frecuentes</string>
    <string name="las_rozas_madrid">Las Rozas, Madrid</string>
    <string name="almer_a">Almería</string>
    <string name="nalda_la_rioja">Nalda, La Rioja</string>
    <string name="n_jera_xd">Nájera (xD)</string>
    <string name="bilbao">Bilbao</string>
    <string name="barcelona">Barcelona</string>
    <string name="siguenos_ahora">Síguenos ahora</string>
    <string name="siguenos_en_twitter_para_no_perderte_ninguna_actualizacion_noticias_y_mas">Síguenos en Twitter para no perderte ninguna actualización, noticias y más</string>
    <string name="sguenos_en_nuestro_twitter">¡Síguenos en nuestro Twitter!</string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="introduce_tu_asunto">Introduce tu asunto</string>
    <string name="enviar">Enviar</string>
    <string name="introduce_tu_tel_fono">Introduce tu teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="ayuda">Ayuda</string>
    <string name="c_mo_podemos_ayudarte">¿Cómo podemos ayudarte?</string>
    <string name="asunto">Asunto</string>
    <string name="email">Email</string>
    <string name="mensaje">Mensaje</string>
    <string name="telefono">Teléfono</string>
    <string name="nombre_articulo_por_defecto">nombre_articulo</string>
    <string name="descripcion_articulo_por_defecto">descripcion_articulo</string>
    <string name="precio_articulo_por_defecto">precio_articulo</string>

</resources>