<!-- Articulo_item.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Imagen del artículo -->
    <ImageView
        android:id="@+id/imageViewArticulo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:contentDescription="TODO" />

    <!-- Nombre del artículo -->
    <TextView
        android:id="@+id/textViewNombreArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/nombre_articulo_por_defecto" />

    <!-- Descripción del artículo -->
    <TextView
        android:id="@+id/textViewDescripcionArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:text="@string/descripcion_articulo_por_defecto" />

    <!-- Precio del artículo -->
    <TextView
        android:id="@+id/textViewPrecioArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:text="@string/precio_articulo_por_defecto" />

</LinearLayout>
