<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="373dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="47dp"
        android:fontFamily="@font/roboto"
        android:text="@string/no_podr_s_volver_a_acceder_a_tu_cuenta_si_la_borras"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.79"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_weight="1"
        android:backgroundTint="#348e91"
        android:fontFamily="@font/roboto"
        android:text="@string/cancelar"
        android:textColor="#F2F2F2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <View
        android:id="@+id/colorStripTop"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="#348e91"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/eliminar_cuenta"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/colorStripTop"
        app:layout_constraintEnd_toEndOf="@+id/colorStripTop"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btnBack_desc"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/colorStripTop"
        app:layout_constraintEnd_toStartOf="@+id/textViewTitle"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/colorStripTop"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="177dp"
        android:layout_height="184dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorStripTop"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/borrar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/est_s_seguro_que_quieres_eliminar_tu_cuenta"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/imageButtonEliminar"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:layout_weight="1"
        android:backgroundTint="#913434"
        android:fontFamily="@font/roboto"
        android:text="@string/eliminar_cuenta"
        android:textColor="#F2F2F2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>