<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="156dp"
        android:text="@string/siguenos_ahora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewAcercaDe"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:text="@string/siguenos_en_twitter_para_no_perderte_ninguna_actualizacion_noticias_y_mas"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.073" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewTwitter"
        android:layout_width="332dp"
        android:layout_height="332dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="442dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorStripTop"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:srcCompat="@drawable/twitter"


        app:strokeColor="@color/black"
        app:strokeWidth="1.5dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="35dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="308dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sguenos_en_nuestro_twitter"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/colorStripTop"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="#348e91"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/redes_sociales"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:translationY="-10dp"
        app:layout_constraintBottom_toBottomOf="@+id/colorStripTop"
        app:layout_constraintEnd_toEndOf="@+id/colorStripTop"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#348E91"
        android:contentDescription="@string/btnBack_desc"
        app:icon="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="@+id/colorStripTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/colorStripTop"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/toolbar_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>